# Habit_system_discord

./: .cursorrules  .dockerignore  .gitignore  ACCOUNTABILITY_MONEY_AGENT_IMPLEMENTATION.md  AGENTS_SYSTEM_ARCHITECTURE.md  AGENT_AND_TECH_STACK_OVERVIEW.md  AGENT_DOCUMENTATION_SUMMARY.md  AGENT_FIX_RESULTS.md  AGENT_ISSUES_AND_FIXES.md  AGENT_STATUS_REPORT.md  AGENT_TEST_RESULTS.md  AI_SEMANTIC_MATCHING_ENHANCEMENT.md  AI_TOOL_MATCHING_IMPLEMENTATION.md  AUTOMATIC_PROOFING_FIX_SUMMARY.md  Agents.md  BOT_FIX_DIAGNOSTIC_REPORT.md  BUDDY_SYSTEM_TEST_RESULTS.md  BUGFIX-DUPLICATE-MESSAGES.md  CHALLENGE_NOTION_SCHEMA.md  CHALLENGE_SETUP.md  CLAUDE.md  COMPLETE_SYSTEM_OVERVIEW.md  COMPREHENSIVE_TEST_RESULTS.md  CREATE_PERSONALITY_DATABASE_GUIDE.md  CURRENT_SLASH_COMMANDS.md  DAILY_MESSAGE_FIX_SUMMARY.md  DAILY_MESSAGE_SCHEDULER_IMPLEMENTATION.md  DATABASE_DOCUMENTATION_SUMMARY.md  DATABASE_SHARING_FIX.md  DATABASE_SHARING_GUIDE.md  DEBUG_ANALYSIS.md  DEPLOYMENT_ANALYSIS_AND_FIX_PLAN.md  DEPLOYMENT_COMPLETE.md  DISCORD_HABIT_SYSTEM_USER_GUIDE.md  DISCORD_LOGGING_SYSTEM.md  DISCORD_SLASH_COMMANDS.md  DISCORD_USER_JOURNEY.md  DOCKER_BUILD_FIX.md  DOCKER_DEPLOYMENT_GUIDE.md  DOCKER_DEPLOYMENT_SUCCESS.md  (+164 more)
chatbot/: .dockerignore  Dockerfile  Makefile  README.md  alembic.ini  pyproject.toml  pytest.ini
chatbot/alembic/: env.py  generate_migrations.py
chatbot/alembic/versions/: 7cb90def3a6f_auto.py  e53bc182edd6_auto.py
chatbot/codegen/: call_expression_visitor.py  redocly.yaml
chatbot/codegen/plugins/: cleanup.js  flip.js  multi-filter.js
chatbot/codegen/templates/: routers.jinja2
chatbot/src/chatbot/: app_services.py  config.py  pydantic_models.py  utils.py
chatbot/src/chatbot/agents/: README.md
chatbot/src/chatbot/api/: api.py  error_handlers.py  handlers.py
chatbot/src/chatbot/api_clients/: ask_ai_settings.py  flip_flow_core_api.py  flip_flows_api.py  user_api.py  (+2 more)
chatbot/tests/: conftest.py  test_main_utils.py  utils.py
chatbot/tests/api/: test_error_handlers.py  test_triggers_endpoint.py  test_usergroups_endpoint.py
chatbot/tests/util/: test_http_client.py  test_permission_service.py
(+392 files in other folders)
